--- a/home.html
+++ b/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- SEO SECTION --> 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ELEANOR GEDGE - FRONT END DEVELOPER</title>
+
+
+
+
 </head>
 <body>
   <h1>Eleanor Gedge</h1>
