--- a/home.html
+++ b/home.html
@@ -25,6 +25,23 @@
 
 </head>
 <body>
+  <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="/index.html">Ellie Gedge</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="../index.html">Home </a>
+        <a class="nav-item nav-link" href="/about/about.html">About Me</a>
+        <a class="nav-item nav-link" href="/projects/projects.html">My Projects</a>
+        <a class="nav-item nav-link" href="/contact/contact.html">Contact Me</a>
+      </div>
+    </div>
+  </nav>
+
+
   <h1>Eleanor Gedge</h1>
 </body>
 </html>
