updated nav bar HTML

--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
 
 </head>
 <body>
+  <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="/index.html">Ellie Gedge</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
