--- a/home.html
+++ b/home.html
@@ -42,6 +42,14 @@
     </div>
   </nav>
 
+  <div class="container">
+    
+    <!--INTRODUCTION SECTION-->
+    <div class="introduction">
+      <h1>ELEANOR GEDGE</h1>
+    </div>
+    <hr />
+
 
   <h1>Eleanor Gedge</h1>
 </body>
