added about me section to HTML

--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- SEO SECTION --> 
+  <!-- SEO SECTION -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,14 @@
 
   <!--JS SECTION-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/b2f3d5d839.js" crossorigin="anonymous"></script>
 
   <!--SCRIPT SECTION-->
@@ -24,6 +28,7 @@
   <link rel="stylesheet" href="/styles/styles.css" />
 
 </head>
+
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
@@ -43,14 +48,30 @@
   </nav>
 
   <div class="container">
-    
+
     <!--INTRODUCTION SECTION-->
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
     </div>
     <hr />
 
+    <div class="row">
+      <!--ABOUT ME SECTION-->
+      <div class="col-md-3 about-me">
+        <h2 class="about-me">ABOUT ME</h2>
+        <h5>aspiring front-end developer from Stamford</h5>
+        <p>
+          Currently in the role of Assistant Marketing Manager specialising in Loyalty
+          for a quick service restaurant brand, with an aspiration of becoming a front-end
+          developer.
+        </p>
+      </div>
 
-  <h1>Eleanor Gedge</h1>
+
+
+    </div>
+
+
 </body>
+
 </html>
