added weather app section to HTML

--- a/home.html
+++ b/home.html
@@ -67,8 +67,29 @@
         </p>
       </div>
 
+      <!--MY PROJECTS SECTION-->
+      <div class="col-md-9 projects">
+        <h2 class="projects">MY PROJECTS</h2>
 
+        <!--WEATHER APP SECTION-->
+        <h4 class="weather-app">Weather App - Landscape</h4>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i> |
+        <i class="fab fa-github-square skills"></i> |
+        <i class="fas fa-server skills"></i> |
+        <i class="fas fa-cogs skills"></i> |
+        <i class="fab fa-connectdevelop skills"></i> |
+        <i class="fab fa-bootstrap skills"></i>
+        </br>
+        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Search for
+          the weather by inputting a location into the search bar or use the geo-locator option to pull the weather of
+          your current location. </p>
+        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Weather App</a>
 
+      </div>
     </div>
 
 
