added Arctic Monkeys section in HTML

--- a/home.html
+++ b/home.html
@@ -107,7 +107,15 @@
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
 
-
+        <!--ARCTIC MONKEYS SECTION-->
+        <h4 class="arctic-monkeys">Arctic Monkeys</h4>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i>
+        <p>A single webpage built using HTML, CSS and JS.</p>
+        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
 
 
 
