added footer section in HTML

--- a/home.html
+++ b/home.html
@@ -116,12 +116,25 @@
         <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
-
-
-
       </div>
     </div>
-
+    
+    <!--FOOTER SECTION-->
+    <hr />
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-6 copyright">
+            2021 Eleanor Gedge
+          </div>
+          <div class="col-sm-6 social-icons">
+            <a class="text-muted" href="#" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+            <a class="text-muted" href="#" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
+            <a class="text-muted" href="#" title="Email Ellie Gedge"><i class="far fa-envelope"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 </body>
 
