various updates to HTML

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html">Ellie Gedge</a>
+    <a class="navbar-brand" href="/index.html">ELEANOR GEDGE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -57,10 +57,10 @@
 
     <div class="row">
       <!--ABOUT ME SECTION-->
-      <div class="col-md-3 about-me">
-        <h2 class="about-me">ABOUT ME</h2>
-        <h5>aspiring front-end developer from Stamford</h5>
-        <p>
+      <div class="col-md-4 about-me">
+        <h2 class="about-me-title">ABOUT ME</h2>
+        <h5>Aspiring front-end developer from Stamford</h5>
+        <p class="about-me-section">
           Currently in the role of Assistant Marketing Manager specialising in Loyalty
           for a quick service restaurant brand, with an aspiration of becoming a front-end
           developer.
@@ -68,7 +68,7 @@
       </div>
 
       <!--MY PROJECTS SECTION-->
-      <div class="col-md-9 projects">
+      <div class="col-md-8 projects">
         <h2 class="projects">MY PROJECTS</h2>
 
         <!--WEATHER APP SECTION-->
@@ -89,7 +89,7 @@
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
 
-        <!--WEATHER APP - PORTRAIT SECTION-->
+        <!--WEATHER APP - PORTRAIT SECTION
         <h4 class="weather-app">Weather App - Portait</h4>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
@@ -106,7 +106,8 @@
         <img src="images/weather-app-portrait.png" class="img-fluid weather-app-portrait" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
-
+        -->
+        
         <!--ARCTIC MONKEYS SECTION-->
         <h4 class="arctic-monkeys">Arctic Monkeys</h4>
         <i class="fab fa-html5 skills"></i> |
