--- a/home.html
+++ b/home.html
@@ -57,10 +57,10 @@
 
     <div class="row">
       <!--ABOUT ME SECTION-->
-      <div class="col-md-4 about-me">
-        <h2 class="about-me-title">ABOUT ME</h2>
+      <div class="col-md-5 about-me">
+        <h2 class="about-me">ABOUT ME</h2>
         <h5>Aspiring front-end developer from Stamford</h5>
-        <p class="about-me-section">
+        <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty
           for a quick service restaurant brand, with an aspiration of becoming a front-end
           developer.
@@ -68,11 +68,11 @@
       </div>
 
       <!--MY PROJECTS SECTION-->
-      <div class="col-md-8 projects">
+      <div class="col-md-7 projects">
         <h2 class="projects">MY PROJECTS</h2>
 
         <!--WEATHER APP SECTION-->
-        <h4 class="weather-app">Weather App - Landscape</h4>
+        <h5 class="weather-app">Weather App - Landscape</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
         <i class="fab fa-js-square skills"></i> |
@@ -89,8 +89,8 @@
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
 
-        <!--WEATHER APP - PORTRAIT SECTION
-        <h4 class="weather-app">Weather App - Portait</h4>
+        <!--WEATHER APP - PORTRAIT SECTION-->
+        <h5 class="weather-app">Weather App - Portait</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
         <i class="fab fa-js-square skills"></i> |
@@ -106,17 +106,18 @@
         <img src="images/weather-app-portrait.png" class="img-fluid weather-app-portrait" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
-        -->
+        
 
-        <!--ARCTIC MONKEYS SECTION-->
-        <h4 class="arctic-monkeys">Arctic Monkeys</h4>
+        <!--ARCTIC MONKEYS SECTION
+        <h5 class="arctic-monkeys">Arctic Monkeys</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
         <i class="fab fa-js-square skills"></i>
         <p>A single webpage built using HTML, CSS and JS.</p>
-        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <img src="images/arcticmonkeys.png" class="img-fluid weather-app-landscape" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
+        -->
       </div>
     </div>
     
@@ -129,8 +130,9 @@
             2021 Eleanor Gedge
           </div>
           <div class="col-sm-6 social-icons">
-            <a class="text-muted" href="#" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="text-muted" href="#" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
+            <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+            <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
+            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
             <a class="text-muted" href="#" title="Email Ellie Gedge"><i class="far fa-envelope"></i></a>
           </div>
         </div>
