--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
         <h2 class="about-me">ABOUT ME</h2>
         <h5>Aspiring front-end developer from Stamford</h5>
         <p>
-          Currently in the role of Assistant Marketing Manager specialising in Loyalty
+          Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
           for a quick service restaurant brand, with an aspiration of becoming a front-end
           developer.
         </p>
