--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
             <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
             <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
             <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="text-muted" href="#" title="Email Ellie Gedge"><i class="far fa-envelope"></i></a>
+            <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i class="far fa-envelope"></i></a>
           </div>
         </div>
       </div>
