updated HTML on homepage

--- a/home.html
+++ b/home.html
@@ -80,16 +80,15 @@
         <i class="fas fa-server skills"></i> |
         <i class="fas fa-cogs skills"></i> |
         <i class="fab fa-connectdevelop skills"></i> |
+        <i class="far fa-object-group technology"></i> |
         <i class="fab fa-bootstrap skills"></i>
         </br>
-        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Search for
-          the weather by inputting a location into the search bar or use the geo-locator option to pull the weather of
-          your current location. </p>
+        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in portrait or landscape formats.</p>
         <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
 
-        <!--WEATHER APP - PORTRAIT SECTION-->
+        <!--WEATHER APP - PORTRAIT SECTION
         <h5 class="weather-app">Weather App - Portait</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
@@ -98,15 +97,16 @@
         <i class="fas fa-server skills"></i> |
         <i class="fas fa-cogs skills"></i> |
         <i class="fab fa-connectdevelop skills"></i> |
+        <i class="far fa-object-group technology"></i> |
         <i class="fab fa-bootstrap skills"></i>
         </br>
         <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Search for
           the weather by inputting a location into the search bar or use the geo-locator option to pull the weather of
-          your current location. </p>
+          your current location. Available in portrait or landscape formats.</p>
         <img src="images/weather-app-portrait.png" class="img-fluid weather-app-portrait" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Weather App</a>
-        
+        -->
 
         <!--ARCTIC MONKEYS SECTION
         <h5 class="arctic-monkeys">Arctic Monkeys</h5>
