--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
         <h2 class="projects">MY PROJECTS</h2>
 
         <!--WEATHER APP SECTION-->
-        <h5 class="weather-app">Weather App - Landscape</h5>
+        <h5 class="weather-app">Weather App</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
         <i class="fab fa-js-square skills"></i> |
