started adding content to projects page

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
       <!--ABOUT ME SECTION-->
       <div class="col-md-4 about-me">
         <h2 class="about-me">ABOUT ME</h2>
-        <h5>Aspiring front-end developer from Stamford, UK</h5>
+        <h5>Aspiring front-end developer from Stamford, UK/h5>
         <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
           for a quick service restaurant brand, with an aspiration of becoming a front-end
