--- a/projects/projects.html
+++ b/projects/projects.html
@@ -55,6 +55,32 @@
     </div>
     <hr />
     COMING SOON
+    <hr/>
+    <div class="projects">
+      <h2 >MY PROJECTS</h2>
+      <h5>Explore my projects below</h5>
+    </div>
+    <br/>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-center">
+          <h5>Weather App-Landscape</h5>
+          <a class="btn project-link" href="#" target="_blank">Weather App - Landscape</a>
+        </div>
+        <div class="col-md-6 text-center">
+          <h5>Weather App - Portrait</h5>
+          <a class="btn project-link" href="#" target="_blank">Weather App - Portait</a>
+        </div>
+        <div class="col-md-6 text-center">
+          <h5>React Dictionary</h5>
+          <a class="btn project-link" href="#" target="_blank">React Dictionary</a>
+        </div>
+        <div class="col-md-6 text-center">
+          <h5>Arctic Monkeys Fan Page</h5>
+          <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
+        </div>
+      </div>
 
     <!--FOOTER SECTION-->
     <hr />
