multiple changes to build website

--- a/home.html
+++ b/home.html
@@ -46,99 +46,51 @@
       </div>
     </div>
   </nav>
+<div class="container">
+  <!--INTRODUCTION SECTION-->
+  <div class="introduction">
+    <h1>ELEANOR GEDGE</h1>
+  </div>
+  <hr />
+  <div class="row">
 
-  <div class="container">
-
-    <!--INTRODUCTION SECTION-->
-    <div class="introduction">
-      <h1>ELEANOR GEDGE</h1>
+    <!--ABOUT ME SECTION-->
+    <div class="col-md-4 about-me">
+      <h2 class="about-me">ABOUT ME</h2>
+      <h5>Aspiring front-end developer from Stamford, UK</h5>
+      <p>
+        Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
+        for a quick service restaurant brand, with an aspiration of becoming a front-end
+        developer.
+      </p>
     </div>
-    <hr />
 
-    <div class="row">
-      <!--ABOUT ME SECTION-->
-      <div class="col-md-4 about-me">
-        <h2 class="about-me">ABOUT ME</h2>
-        <h5>Aspiring front-end developer from Stamford, UK</h5>
-        <p>
-          Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
-          for a quick service restaurant brand, with an aspiration of becoming a front-end
-          developer.
-        </p>
-      </div>
-
-      <!--MY PROJECTS SECTION-->
-      <div class="col-md-8 projects">
-        <h2 class="projects">MY PROJECTS</h2>
-
-        <!--WEATHER APP SECTION-->
-        <h5 class="weather-app">Weather App</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i> |
-        <i class="fab fa-github-square skills"></i> |
-        <i class="fas fa-server skills"></i> |
-        <i class="fas fa-cogs skills"></i> |
-        <i class="fab fa-connectdevelop skills"></i> |
-        <i class="far fa-object-group technology"></i> |
-        <i class="fab fa-bootstrap skills"></i>
-        </br>
-        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in portrait or landscape formats.</p>
-        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
-        <br />
-        <a class="btn project-link" href="#" target="_blank">Weather App</a>
-
-        <!--WEATHER APP - PORTRAIT SECTION
-        <h5 class="weather-app">Weather App - Portait</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i> |
-        <i class="fab fa-github-square skills"></i> |
-        <i class="fas fa-server skills"></i> |
-        <i class="fas fa-cogs skills"></i> |
-        <i class="fab fa-connectdevelop skills"></i> |
-        <i class="far fa-object-group technology"></i> |
-        <i class="fab fa-bootstrap skills"></i>
-        </br>
-        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Search for
-          the weather by inputting a location into the search bar or use the geo-locator option to pull the weather of
-          your current location. Available in portrait or landscape formats.</p>
-        <img src="images/weather-app-portrait.png" class="img-fluid weather-app-portrait" />
-        <br />
-        <a class="btn project-link" href="#" target="_blank">Weather App</a>
-        -->
-
-        <!--ARCTIC MONKEYS SECTION
-        <h5 class="arctic-monkeys">Arctic Monkeys</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i>
-        <p>A single webpage built using HTML, CSS and JS.</p>
-        <img src="images/arcticmonkeys.png" class="img-fluid weather-app-landscape" />
-        <br />
-        <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
-        -->
-      </div>
+    <!--MY PROJECTS SECTION-->
+    <div class="col-md-8">
     </div>
-    
-    <!--FOOTER SECTION-->
-    <hr />
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-6 copyright">
-            2021 Eleanor Gedge
-          </div>
-          <div class="col-sm-6 social-icons">
-            <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
-            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i class="far fa-envelope"></i></a>
-          </div>
+  </div>
+
+
+  <!--FOOTER SECTION-->
+  <hr />
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 copyright">2021 Eleanor Gedge
+        </div>
+        <div class="col-sm-6 social-icons">
+          <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+            title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+          <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+              class="fab fa-github"></i></a>
+          <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank"
+            title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+          <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+              class="far fa-envelope"></i></a>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
+  </body>
 
-</body>
-
-</html>
+  </html>
