--- a/projects/projects.html
+++ b/projects/projects.html
@@ -54,33 +54,79 @@
       <h1>ELEANOR GEDGE</h1>
     </div>
     <hr />
-    COMING SOON
-    <hr/>
     <div class="projects">
-      <h2 >MY PROJECTS</h2>
+      <h2>MY PROJECTS</h2>
       <h5>Explore my projects below</h5>
     </div>
-    <br/>
+    <br />
 
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center">
-          <h5>Weather App-Landscape</h5>
-          <a class="btn project-link" href="#" target="_blank">Weather App - Landscape</a>
+          <h5 class="weather-app">Weather App-Landscape</h5>
+          <i class="fab fa-html5 skills"></i> |
+          <i class="fab fa-css3-alt skills"></i> |
+          <i class="fab fa-js-square skills"></i> |
+          <i class="fab fa-github-square skills"></i> |
+          <i class="fas fa-server skills"></i> |
+          <i class="fas fa-cogs skills"></i> |
+          <i class="fab fa-connectdevelop skills"></i> |
+          <i class="far fa-object-group technology"></i> |
+          <i class="fab fa-bootstrap skills"></i>
+          </br>
+          <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
+            portrait or landscape formats.</p>
+          <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+          <br />
+          <a class="btn project-link" href="#" target="_blank">Go to project</a>
         </div>
         <div class="col-md-6 text-center">
-          <h5>Weather App - Portrait</h5>
-          <a class="btn project-link" href="#" target="_blank">Weather App - Portait</a>
+          <h5 class="weather-app">Weather App-Portrait</h5>
+          <i class="fab fa-html5 skills"></i> |
+          <i class="fab fa-css3-alt skills"></i> |
+          <i class="fab fa-js-square skills"></i> |
+          <i class="fab fa-github-square skills"></i> |
+          <i class="fas fa-server skills"></i> |
+          <i class="fas fa-cogs skills"></i> |
+          <i class="fab fa-connectdevelop skills"></i> |
+          <i class="far fa-object-group technology"></i> |
+          <i class="fab fa-bootstrap skills"></i>
+          </br>
+          <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
+            portrait or landscape formats.</p>
+          <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+          <br />
+          <a class="btn project-link" href="#" target="_blank">Go to project</a>
         </div>
-        <div class="col-md-6 text-center">
-          <h5>React Dictionary</h5>
-          <a class="btn project-link" href="#" target="_blank">React Dictionary</a>
-        </div>
-        <div class="col-md-6 text-center">
-          <h5>Arctic Monkeys Fan Page</h5>
-          <a class="btn project-link" href="#" target="_blank">Arctic Monkeys</a>
-        </div>
+      <div class="col-md-6 text-center">
+        <h5 class="weather-app">Arctic Monkeys - Fan Page</h5>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i>
+        </br>
+        <p>Coming soon.</p>
+        <img src="" class="" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Go to project</a>
       </div>
+      <div class="col-md-6 text-center">
+        <h5 class="weather-app">Dictionary</h5>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i> |
+        <i class="fab fa-github-square skills"></i> |
+        <i class="fas fa-server skills"></i> |
+        <i class="fas fa-cogs skills"></i> |
+        <i class="fab fa-connectdevelop skills"></i> |
+        <i class="far fa-object-group technology"></i> |
+        <i class="fab fa-bootstrap skills"></i>
+        </br>
+        <p>Coming soon.</p>
+        <img src="" class="" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+      </div>
+    </div>
 
     <!--FOOTER SECTION-->
     <hr />
@@ -95,8 +141,8 @@
               title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
             <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
                 class="fab fa-github"></i></a>
-            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank" title="Instagram Profile"><i
-                class="fab fa-instagram"></i></a>
+            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank"
+              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
             <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
