tidied up to ensure the layout is the same on all pages

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -53,51 +53,59 @@
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
     </div>
+
     <hr />
+
+    <!--MY PROJECTS SECTION-->
     <div class="projects">
       <h2>MY PROJECTS</h2>
       <h5>Explore my projects below</h5>
     </div>
     <br />
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-center">
-          <h5 class="weather-app">Weather App-Landscape</h5>
-          <i class="fab fa-html5 skills"></i> |
-          <i class="fab fa-css3-alt skills"></i> |
-          <i class="fab fa-js-square skills"></i> |
-          <i class="fab fa-github-square skills"></i> |
-          <i class="fas fa-server skills"></i> |
-          <i class="fas fa-cogs skills"></i> |
-          <i class="fab fa-connectdevelop skills"></i> |
-          <i class="far fa-object-group technology"></i> |
-          <i class="fab fa-bootstrap skills"></i>
-          </br>
-          <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
-            portrait or landscape formats.</p>
-          <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
-          <br />
-          <a class="btn project-link" href="#" target="_blank">Go to project</a>
-        </div>
-        <div class="col-md-6 text-center">
-          <h5 class="weather-app">Weather App-Portrait</h5>
-          <i class="fab fa-html5 skills"></i> |
-          <i class="fab fa-css3-alt skills"></i> |
-          <i class="fab fa-js-square skills"></i> |
-          <i class="fab fa-github-square skills"></i> |
-          <i class="fas fa-server skills"></i> |
-          <i class="fas fa-cogs skills"></i> |
-          <i class="fab fa-connectdevelop skills"></i> |
-          <i class="far fa-object-group technology"></i> |
-          <i class="fab fa-bootstrap skills"></i>
-          </br>
-          <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
-            portrait or landscape formats.</p>
-          <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
-          <br />
-          <a class="btn project-link" href="#" target="_blank">Go to project</a>
-        </div>
+    <div class="row">
+
+      <!--WEATHER APP LANDSCAPE SECTION-->
+      <div class="col-md-6 text-center">
+        <h5 class="weather-app">Weather App-Landscape</h5>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i> |
+        <i class="fab fa-github-square skills"></i> |
+        <i class="fas fa-server skills"></i> |
+        <i class="fas fa-cogs skills"></i> |
+        <i class="fab fa-connectdevelop skills"></i> |
+        <i class="far fa-object-group technology"></i> |
+        <i class="fab fa-bootstrap skills"></i>
+        </br>
+        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
+          portrait or landscape formats.</p>
+        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+      </div>
+
+      <!--WEATHER APP PORTRAIT SECTION-->
+      <div class="col-md-6 text-center">
+        <h5 class="weather-app">Weather App-Portrait</h5>
+        <i class="fab fa-html5 skills"></i> |
+        <i class="fab fa-css3-alt skills"></i> |
+        <i class="fab fa-js-square skills"></i> |
+        <i class="fab fa-github-square skills"></i> |
+        <i class="fas fa-server skills"></i> |
+        <i class="fas fa-cogs skills"></i> |
+        <i class="fab fa-connectdevelop skills"></i> |
+        <i class="far fa-object-group technology"></i> |
+        <i class="fab fa-bootstrap skills"></i>
+        </br>
+        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
+          portrait or landscape formats.</p>
+        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <br />
+        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+      </div>
+
+      <!--ARCTIC MONKEYS SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Arctic Monkeys - Fan Page</h5>
         <i class="fab fa-html5 skills"></i> |
@@ -109,6 +117,8 @@
         <br />
         <a class="btn project-link" href="#" target="_blank">Go to project</a>
       </div>
+
+      <!--DICTIONARY SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Dictionary</h5>
         <i class="fab fa-html5 skills"></i> |
@@ -147,7 +157,6 @@
                 class="far fa-envelope"></i></a>
           </div>
         </div>
-      </div>
     </footer>
   </div>
 </body>
