updated images on projects page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -61,7 +61,6 @@
       <h2>MY PROJECTS</h2>
       <h5>Explore my projects below</h5>
     </div>
-    <br />
 
     <div class="row">
 
@@ -80,7 +79,7 @@
         </br>
         <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
           portrait or landscape formats.</p>
-        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <img src="/images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Go to project</a>
       </div>
@@ -100,21 +99,19 @@
         </br>
         <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
           portrait or landscape formats.</p>
-        <img src="images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <img src="/images/weather-app-portrait.PNG" class="img-fluid weather-app-portrait" />
         <br />
         <a class="btn project-link" href="#" target="_blank">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
       <div class="col-md-6 text-center">
-        <h5 class="weather-app">Arctic Monkeys - Fan Page</h5>
+        <h5 class="weather-app">Arctic Monkeys-Fan Page</h5>
         <i class="fab fa-html5 skills"></i> |
         <i class="fab fa-css3-alt skills"></i> |
         <i class="fab fa-js-square skills"></i>
         </br>
         <p>Coming soon.</p>
-        <img src="" class="" />
-        <br />
         <a class="btn project-link" href="#" target="_blank">Go to project</a>
       </div>
 
@@ -133,8 +130,7 @@
         </br>
         <p>Coming soon.</p>
         <img src="" class="" />
-        <br />
-        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+        <a class="btn project-link" href="" target="_blank">Coming soon</a>
       </div>
     </div>
 
