added weather app landscape pages

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -81,7 +81,7 @@
           portrait or landscape formats.</p>
         <img src="/images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
-        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+        <a class="btn project-link" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--WEATHER APP PORTRAIT SECTION-->
