added weather app portrait pages

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -101,7 +101,7 @@
           portrait or landscape formats.</p>
         <img src="/images/weather-app-portrait.PNG" class="img-fluid weather-app-portrait" />
         <br />
-        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+        <a class="btn project-link" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
