--- a/projects/projects.html
+++ b/projects/projects.html
@@ -112,7 +112,7 @@
         <i class="fab fa-js-square skills"></i>
         </br>
         <p>Coming soon.</p>
-        <a class="btn project-link" href="#" target="_blank">Go to project</a>
+        <a class="btn project-link" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
